--- a/Flutter/Layouts/SizedBoxWidget.html
+++ b/Flutter/Layouts/SizedBoxWidget.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SizedBox in Flutter</title>
+	<title>SizedBox Widget</title>
+    <link rel="icon" type="image/x-icon" href="../../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../../Assets/Style.css">
-	<script type="text/javascript" src="../../Assets/prism.min.js"></script>
-	<script type="text/javascript" src="../../Assets/jquery.min.js"></script>
-  <link rel="stylesheet" href="../../Assets/prism-dark.css">
 </head>
 <body class="Body">
-<div class="Content Card">
+<div class="page card">
 
 
 
 <h1>SizedBox Widget</h1>
 <p>A box with a specified size.</p>
-<p>If given a child, this widget forces its child to have a specific width and/or height (assuming values are permitted by this widget's parent). If either the width or height is null, this widget will try to size itself to match the child's size in that dimension. If the child's size depends on the size of its parent, the height and width must be provided.</p>
-<p>If not given a child, SizedBox will try to size itself as close to the specified height and width as possible given the parent's constraints. If height or width is null or unspecified, it will be treated as zero.</p>
+<p>If given a child, this widget forces its child to have a specific width and/or height (assuming values are permitted by this widget's parent). If either the width or height is <code>null</code>, this widget will try to size itself to match the child's size in that dimension. If the child's size depends on the size of its parent, the height and width must be provided.</p>
+<p>If not given a child, <code>SizedBox</code> will try to size itself as close to the specified height and width as possible given the parent's constraints. If height or width is <code>null</code> or unspecified, it will be treated as zero.</p>
 <pre>
 SizedBox(
 	width: 200.0,
@@ -32,8 +30,13 @@ SizedBox(
 
 <h3>height</h3>
 <p>If non-null, requires the child to have exactly this height.</p>
-<p>The difference between Container and SizedBox is that the SizedBox is not only simpler, but it also can be made const, while Container cannot. If you need a box with color you cannot use SizedBox. Instead you need to use Container with width and height arguments for this purpose.</p>
-<p>The new SizedBox.expand constructor can be used to make a SizedBox that sizes itself to fit the parent. It is equivalent to setting width and height to <code>double.infinity</code>.</p>
+
+
+<h2>Container vs SizedBox</h2>
+<p>The difference between <code>Container</code> and <code>SizedBox</code> is that the <code>SizedBox</code> is not only simpler, but it also can be made <code>const</code>, while <code>Container</code> cannot. If you need a box with color you cannot use <code>SizedBox</code>. Instead you need to use <code>Container</code> with <code>width</code> and <code>height</code> arguments for this purpose.</p>
+
+<h2>SizedBox.expand</h2>
+<p>The new <code>SizedBox.expand</code> constructor can be used to make a <code>SizedBox</code> that sizes itself to fit the parent. It is equivalent to setting <code>width</code> and <code>height</code> to <code>double.infinity</code>.</p>
 <pre>
 Container(
 	color : Colors.blue,
