--- a/Flutter/Layouts/ConstrainedBox.html
+++ b/Flutter/Layouts/ConstrainedBox.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ConstrainedBox in Flutter</title>
+	<title>Box Constraints</title>
+    <link rel="icon" type="image/x-icon" href="../../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../../Assets/Style.css">
-	<script type="text/javascript" src="../../Assets/prism.min.js"></script>
-	<script type="text/javascript" src="../../Assets/jquery.min.js"></script>
-  <link rel="stylesheet" href="../../Assets/prism-dark.css">
 </head>
 <body class="Body">
-<div class="Content Card">
+<div class="page card">
 
 
 
