--- a/Flutter/Layouts/DividerWidget.html
+++ b/Flutter/Layouts/DividerWidget.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Divider in Flutter</title>
+	<title>Divider Widget</title>
+    <link rel="icon" type="image/x-icon" href="../../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../../Assets/Style.css">
-	<script type="text/javascript" src="../../Assets/prism.min.js"></script>
-	<script type="text/javascript" src="../../Assets/jquery.min.js"></script>
-  <link rel="stylesheet" href="../../Assets/prism-dark.css">
 </head>
 <body class="Body">
-<div class="Content Card">
+<div class="page card">
 
 
 
 <h1>Divider Widget</h1>
 <p>A thin horizontal line, with padding on top and bottom side. In the material design language, this represents a divider. Dividers can be used in lists, Drawers, and elsewhere to separate content.</p>
-<p>The box's total height is controlled by <code>height</code> argument. The appropriate padding is automatically computed from the height.</p>
+<p>The box's total height is controlled by <code>height</code> argument. The appropriate padding is automatically computed from the <code>height</code> and <code>thickness</code>.</p>
 <p>The following sample shows how to display a Divider between an orange and blue box inside a column. The Divider is 20 logical pixels in height and contains a vertically centered black line that is 5 logical pixels thick. The black line is indented by 20 logical pixels.</p>
 <img src="../../Assets/flutter/divider.png">
 <pre>
@@ -71,13 +69,13 @@ class MyStatelessWidget extends StatelessWidget {
     );
 </pre>
 <p>Are are some argument you can use to modify the divider:</p>
-<ul>
+<ol>
 	<li><code>color</code>: The color to use when painting the line.</li>
-	<li><code>height</code>: The divider's height extent.</li>
+	<li><code>height</code>: The divider's height extent. The height property includes padding top and padding bottom of the divider.</li>
 	<li><code>endIndent</code>: The amount of empty space to the trailing edge of the divider.</li>
 	<li><code>indent</code>: The amount of empty space to the leading edge of the divider.</li>
 	<li><code>thickness</code>: The thickness of the line drawn within the divider.</li>
-</ul>
+</ol>
 
 
 
