--- a/Flutter/Layouts/ConstrainedBox.html
+++ b/Flutter/Layouts/ConstrainedBox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Box Constraints</title>
+	<title>Constraints</title>
     <link rel="icon" type="image/x-icon" href="../../Assets/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../../Assets/bulma.css">
 	<link rel="stylesheet" type="text/css" href="../../Assets/Style.css">
@@ -14,8 +14,7 @@
 
 
 <h1>BoxConstraints</h1>
-<p>BoxConstraints is used to proved the constraints value to the <code>ConstrainedBox</code> widget.</p>
-<p>You can change a Widget's sizing behaviour beased on the BoxConstraints given to it. You can provide BoxConstraints in <code>ConstrainedBox</code> widget. First lets explore few BoxConstraints that we can use.</p>
+<p>BoxConstraints is used to provide the constraints value to the <code>ConstrainedBox</code> widget. You can change a Widget's sizing behaviour beased on the <code>BoxConstraints</code> given to it. First lets explore few <code>BoxConstraints</code> that we can use.</p>
 
 <h3>BoxConstraints()</h3>
 <p>Creates box constraints with the given constraints.</p>
@@ -27,31 +26,76 @@ BoxConstraints({
 	double maxHeight: double.infinity
 })
 </pre>
+<p>Here is an example of using <code>BoxConstraints</code>:</p>
+<pre>
+Center(
+	child: Container(
+		color: Colors.green,
+		padding: EdgeInsets.all(20),
+		child: Text(
+			'Hello World',
+			style: TextStyle(color: Colors.white, fontSize: 20),
+		),
+		constraints: BoxConstraints(
+			minHeight: 50,
+			minWidth: 50,
+			maxHeight: 80,
+			maxWidth: 80
+		),
+	),
+)
+</pre>
 
 <h3>BoxConstraints.expand({double width, double height})</h3>
 <p>Creates box constraints that expand to fill another box constraints.</p>
-<p>If <code>width</code> or <code>height</code> is given, the constraints will require exactly the given value in the given dimension.</p>
-<p>If <code>width</code> and <code>height</code> is not given, then the default value is <code>double.Infinity</code>, means the widget will tries to fill the parent widget.</p>
+<p>If <code>width</code> or <code>height</code> is given, the constraints will require exactly the given value in the given dimension. If <code>width</code> and <code>height</code> is not given, then the default value is <code>double.Infinity</code>, means the widget will tries to fill the parent widget.</p>
+<p>The following example will expand the widget in every direction (x and y-axis) to the constraints of its parent.</p>
+<pre>
+constraints: BoxConstraints.expand()
+</pre>
+<p>If you want <code>height</code> to be fixed, you can use <code>height</code> property:</p>
+<pre>
+constraints: BoxConstraints.expand(height: 100)
+</pre>
+<p>If you want <code>width</code> to be fixed, you can use <code>width</code> property:</p>
+<pre>
+constraints: BoxConstraints.expand(width: 100)
+</pre>
 
 <h3>BoxConstraints.loose(Size size)</h3>
 <p>Creates box constraints that forbid sizes larger than the given <code>size</code>.</p>
+<pre>
+constraints: BoxConstraints.loose(Size(200.0, 100.0))
+</pre>
+<p>This will create box constraints that forbid sizes larger than the given size. This is equivalent to just setting the maximum height and width:</p>
+<pre>
+constraints: BoxConstraints(
+	maxHeight: 200.0,
+	maxWidth: 100.0,
+)
+</pre>
 
 <h3>BoxConstraints.tight(Size size)</h3>
 <p>Creates box constraints that is respected only by the given size.</p>
-
-<p>To explore more see <a href="https://api.flutter.dev/flutter/rendering/BoxConstraints-class.html">BoxConstraints</a> class.</p>
-
-
-
-
-
+<pre>
+constraints: BoxConstraints.tight(Size(200.0, 100.0))
+</pre>
+<p>The above example is equivalent to the following:</p>
+<pre>
+constraints: BoxConstraints(
+	maxHeight: 200.0,
+	maxWidth: 200.0,
+	minHeight: 100.0,
+	minWidth: 100.0,
+)
+</pre>
 
 
 
 
 <h1>ConstrainedBox</h1>
 <p>A widget that imposes additional constraints on its child.</p>
-<p>For example, if you wanted child to have a minimum height of 50.0 logical pixels, you could use const <code>BoxConstraints(minHeight: 50.0)</code>  as the constraints.</p>
+<p>For example, if you wanted child to have a minimum height of 50.0 logical pixels, you could use const <code>BoxConstraints(minHeight: 50.0)</code> as the constraints.</p>
 <h2>Properties</h2>
 <h3>constraints</h3>
 <p>Used to provide additional constraints to child.</p>
