--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -208,3 +208,6 @@ h1+p, h2+p, h3+p, h4+p{
   justify-content: center;
   align-items: center;
 }
+.table_of_content.not_completed{
+  background-color: red !important;
+}
